# dotfiles

./: .gitignore
dots/: Xmodmap  atcodertools.toml  gitignore  monitors.xml  monitors.xml~  tmux.conf  user.zsh  zshrc
dots/config/: monitors.xml~  starship.toml
dots/config/bat/: config
dots/config/bspwm/: bspwmrc
dots/config/cava/: config
dots/config/direnv/: direnvrc
dots/config/git/: .config  config  ignore
dots/config/hypr/: initial-boot.sh
dots/config/hypr/UserConfigs/: Monitors.conf
dots/config/hypr/configs/: Keybinds.conf
dots/config/hypr/wallust/: wallust-hyprland.conf
dots/config/kitty/: .config  current-theme.conf  kitty.conf
dots/config/memo/: config.toml
dots/config/neovide/: config.toml
dots/config/nvim/: .editorconfig  init.lua  make_venv.sh
dots/config/nvim/after/queries/lua/: highlights.scm
dots/config/nvim/after/queries/python/: highlights.scm
dots/config/nvim/lua/: todo_plugins.txt
dots/config/nvim/lua/config/: autocmds.lua  filetype.lua  ft_content.lua  ftplugin.lua  keymaps.lua  lazy.lua  options.lua
dots/config/nvim/lua/plugins/: aa_jp.md
dots/config/nvim/lua/plugins/common/: action.lua  env.lua  gui.lua  language.lua  lexima.lua  motion.lua  operator.lua
dots/config/nvim/lua/plugins/configs/: cmp.lua  cmp_jp.lua  nvimtree.lua  statusline.lua
dots/config/nvim/lua/plugins/en/: move.lua  operator.lua
dots/config/nvim/lua/plugins/jp/: motion.lua  operator.lua
dots/config/nvim/lua/plugins/nvim/: action.lua  color.lua  filer.lua  gui.lua  language.lua  lsp.lua  notset.lua  treesitter.lua
dots/config/nvim/lua/plugins/nvim_en/: cmp.lua
dots/config/nvim/lua/plugins/nvim_jp/: cmp.lua
dots/config/nvim/nvim_venv/: pyvenv.cfg
dots/config/rofi/: .current_wallpaper  aa.rofi  config.rasi
dots/config/rofi/wallust/: colors-rofi.rasi
dots/config/sheldon/: plugins.toml
dots/config/tiling-assistant/: tiledSessionRestore.json
dots/config/vlc/: vlcrc
dots/config/waybar/: config  style.css
dots/config/waybar/wallust/: colors-waybar.css
dots/config/zathura/: zathurarc
dots/skk/: linux_yaskkserv2.conf  win_yaskkserv2.conf
dots/windows/: Microsoft.PowerShell_profile.ps1  choco-list.config  choco-packages.config.backup  old.json  scoop-packages-list.txt  start_yaskkserv2.ps1  winget-packages-list.json
init/ubuntu/: .bash_history  01_setup.sh  02_mount_disk.sh  03_make_link.sh  04_font_setup.sh  05_skk_dict_maker.sh  a.sh  font.sh  nerd_font_install.sh  nvidia.sh  setup.sh  skk_dict_maker.sh  soft.sh  test.sh  tuto.sh
init/windows/: a.ps1  font_tiral.ps1  link_to_E_Drive.ps1  make_link.ps1  setup.ps1  skk_dict_maker.ps1
template/: base_pyproject.toml  nvim_vscode_keybindings.json  pixi.toml  pixi_pyproject.toml  pyproject.toml  rye.toml
